[gd_scene load_steps=3 format=2]

[ext_resource path="res://Pieces/Pieces.gd" type="Script" id=1]
[ext_resource path="res://Pieces/Shapes/piece_l.png" type="Texture" id=2]

[node name="Piece" type="RigidBody2D"]

position = Vector2( 416, 224 )
input_pickable = true
collision_layer = 1
collision_mask = 1
mode = 3
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 1
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = false
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pickable", "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="1"]

build_mode = 0
polygon = PoolVector2Array( -32, -96, -96, -96, -96, 96, 96, 96, 96, 32, -32, 32 )
_sections_unfolded = [ "Transform" ]

[connection signal="body_entered" from="." to="." method="_on_Piece_body_entered"]

[connection signal="body_exited" from="." to="." method="_on_Piece_body_exited"]

[connection signal="input_event" from="." to="." method="_on_Piece_input_event"]

[connection signal="mouse_entered" from="." to="." method="_on_Piece_mouse_entered"]

[connection signal="mouse_exited" from="." to="." method="_on_Piece_mouse_exited"]


